--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+
 bin/
 obj/
 *.user
@@ -11,3 +12,17 @@ obj/
 *.db
 *.sqlite
 appsettings.*.json
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+dist/
+build/
+.env
+.env.*.local
+*.env
+*.env.local
+*.env.development.local
+*.env.test.local
+*.env.production.local
+.cache/
